--- a/cloud_init.cfg
+++ b/cloud_init.cfg
@@ -18,7 +18,7 @@ chpasswd:
   expire: False
 
 #   This will set root password to StrongPassword
-#   Add user named jmutai with specified Public SSH keys
+#   Add user 'user01' with specified Public SSH keys
 #   The user will be added to wheel group and be allowed to run sudo commands without password.
 users:
   - name: user01
